--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <header class="main-header">
 <div class="wrapper">
 <div class="column">
-  <section class="logo-holder">PIVOT</section>
+  <section class="logo-holder"><span>.</span>PIV<span class="icon">O</span>T</section>
     <nav class="main-nav" role="navigation">
       <ul>
         <li><a href="#">Home</a></li>
@@ -222,5 +222,6 @@
 <!-- /.map-holder -->
 <footer class="main-footer"></footer>
 <!-- /.main-footer -->
+<script src="assets/js/retina-1.1.0.js"></script>
 </body>
 </html>
