Added font awesome
Signed-off-by: Adam Hjerpe <adam.hjerpe@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <script type="text/javascript">
   definegrid = function() {
     var browserWidth = $(window).width();
-    if (browserWidth >= 100)
+    if (browserWidth >= 76)
     {
             pageUnits = 'em';
             colUnits = 'em';
-      pagewidth = 73;
+      pagewidth = 73.5;
       columns = 12;
       columnwidth = 4.75;
       gutterwidth = 1.5;
@@ -85,7 +85,7 @@
 <div class="wrapper">
 <div class="column">
   <section class="logo-holder">
-    <h1><span>.</span>PIV<span class="icon">O</span>T</h1>
+    <h1><span>.</span>PIV<i class="icon fa-repeat"></i>T</h1>
     </section>
     <nav class="main-nav" role="navigation">
       <ul>
@@ -109,19 +109,19 @@
 <div class="wrapper">
 <div class="column">
   <section class="hero-feature">
-    <figure></figure>
+    <figure><i class="icon fa-desktop"></i></figure>
     <h2>Responsive</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, eius?</p>
   </section>
   <!-- /.hero-feature -->
   <section class="hero-feature">
-    <figure></figure>
+    <figure><i class="icon fa-gears"></i></figure>
     <h2>Framework</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, alias?</p>
   </section>
   <!-- /.hero-feature -->
   <section class="hero-feature">
-    <figure></figure>
+    <figure><i class="icon fa-rocket"></i></figure>
     <h2>Ready To Use</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, error!</p>
   </section>
