Mega random dump
Signed-off-by: Adam Hjerpe <adam.hjerpe@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
   <div class="column">
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, alias veritatis delectus.</p>
@@ -151,9 +152,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid reprehenderit sunt.</p>
@@ -161,9 +163,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, molestias iste quia!</p>
@@ -174,9 +177,10 @@
   <div class="column">
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla cumque in illo!</p>
@@ -184,9 +188,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, explicabo quaerat voluptatibus?</p>
@@ -194,9 +199,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis unde voluptatem?</p>
