Mega random dump
Signed-off-by: Adam Hjerpe <adam.hjerpe@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
 <div class="wrapper">
 <div class="column">
   <section class="hero-feature">
-    <figure><i class="icon fa-desktop"></i></figure>
+    <figure><i class="fa-desktop"></i></figure>
     <h2>Responsive</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, eius?</p>
   </section>
   <!-- /.hero-feature -->
   <section class="hero-feature">
-    <figure><i class="icon fa-gears"></i></figure>
+    <figure><i class="fa-gears"></i></figure>
     <h2>Framework</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, alias?</p>
   </section>
   <!-- /.hero-feature -->
   <section class="hero-feature">
-    <figure><i class="icon fa-rocket"></i></figure>
+    <figure><i class="fa-rocket"></i></figure>
     <h2>Ready To Use</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis, error!</p>
   </section>
@@ -141,9 +141,10 @@
   <div class="column">
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, alias veritatis delectus.</p>
@@ -151,9 +152,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aliquid reprehenderit sunt.</p>
@@ -161,9 +163,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, molestias iste quia!</p>
@@ -174,9 +177,10 @@
   <div class="column">
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla cumque in illo!</p>
@@ -184,9 +188,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, explicabo quaerat voluptatibus?</p>
@@ -194,9 +199,10 @@
     </article>
     <article class="gallery-article">
       <figure>
-        <img src="http://placekitten.com/g/350/244"
+        <img src="http://placekitten.com/g/350/244" />
+        <a href="#"></a>
       </figure>
-      <h3></h3>
+      <h3>Red dirt road theme</h3>
       <p><strong>Client: </strong> Company LTD</p>
       <p><strong>Date: </strong>12/12/2012</p>
       <p><strong>Info: </strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis unde voluptatem?</p>
@@ -243,14 +249,14 @@
   <div class="wrapper">
   <div class="column">
     <section class="social-icons">
-      <div class="twitter-icon"><i class="icon fa-twitter"></i></div>
-      <div class="facebook-icon"><i class="icon fa-facebook"></i></div>
-      <div class="google-plus-icon"><i class="icon fa-google-plus"></i></div>
+      <div class="twitter-icon"></div>
+      <div class="facebook-icon"></div>
+      <div class="google-plus-icon"></div>
     </section>
   </div>
   <!-- /.column -->
     <section class="footer-logo-holder">
-      <h1><span>.</span>PIV<i class="icon fa-repeat"></i>T</h1>
+      <h1><span>.</span>PIV<i class="fa-repeat"></i>T</h1>
     </section>
   </div>
 </footer>
