Working State, still buggy and incomplete
Signed-off-by: Adam Hjerpe <adam.hjerpe@hotmail.com>

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <header class="section-header">
     <h2>Our Recent Work</h2>
   </header>
-  <!-- article.gallery-article*6>figure+h3+p*3>em^a -->
+  <!-- article.gallery-article*6>figure+h3+p*3>strong^a -->
 <div class="wrapper">
     <article class="gallery-article">
       <figure>
@@ -201,8 +201,7 @@
     </article>
 </div>
 <!-- /.wrapper -->
-</section>
-<!-- /.article-gallery -->
+
 <section class="sponsor-gallery">
 <header class="section-header">
   <h2>Our Clients</h2>
@@ -228,7 +227,7 @@
   <header class="section-header">
     <h2>Our Location</h2>
   </header>
-  <div id="map-canvas"/>
+  <div id="map-canvas" />
 </section>
 <!-- /.map-holder -->
 <footer class="main-footer">
